tools section text box alignment fix

--- a/profile.css
+++ b/profile.css
@@ -171,30 +171,25 @@ h1, h3{
   text-align: center;
 }
 
-table{
-  padding-top:30px;
-  padding-bottom: 30px;
-  border: 3px solid;
-  border-radius: 10px;
-}
-
-th{
-  text-align: center;
-  padding:5px;
-  width:20%;
-  border-bottom: 2px solid;
-  font-size: 20px;
-}
-
-td{
-  padding:5px;
-  width:auto;
-  text-align: center;
-}
-.jobsum{
-  text-align: justify;
-  padding-top:20px;
-}
+table, th, td {
+  border: 2px solid black;
+  }
+  th, td {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-align:center;
+  background-color: #D7D7D7;
+  font-size:20px
+  }
+  tr:hover{
+  background-color:#A7BFFB;
+  }
+  th{
+  background-color:#484848;
+  color:white;
+  }
 
 p{
   padding-left: 20px;
